fanout_ingress/v2/web-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2
  namespace: default
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"8080":"my-backend-config"}}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web2
  type: NodePort
